@@ -10,22 +10,11 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.mozilla.telemetry</groupId>
     <artifactId>ingestion-beam</artifactId>
-    <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
         <exec.mainClass>com.mozilla.telemetry.Sink</exec.mainClass>
-        <!-- MAVEN_OPTS environment variable configuration is not picked up by jacoco, so we configure memory here -->
-        <!-- The classPath setting is a workaround for https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=911925 -->
-        <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
-
-        <!-- Keep these dependency versions in sync with those pulled in by beam;
-             check https://mvnrepository.com/artifact/org.apache.beam -->
-        <beam.version>2.13.0</beam.version>
-        <google-cloud.version>1.49.0</google-cloud.version>
-        <jackson.version>2.9.9</jackson.version>
     </properties>
 
     <repositories>
@@ -36,6 +25,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ingestion-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-runners-direct-java</artifactId>
@@ -86,7 +80,7 @@
         <dependency>
             <groupId>nl.basjes.parse.useragent</groupId>
             <artifactId>yauaa</artifactId>
-            <version>5.9</version>
+            <version>5.11</version>
         </dependency>
         <dependency>
             <groupId>com.github.everit-org.json-schema</groupId>
@@ -101,7 +95,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.6</version>
+            <version>1.7</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -111,7 +105,7 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.auto.value</groupId>
@@ -142,15 +136,11 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <compilerArgument>-Xlint:all</compilerArgument>
-                    <compilerArgument>-Xdoclint:all</compilerArgument>
-                    <compilerArgument>-Werror</compilerArgument>
+                    <skip>false</skip>
                 </configuration>
             </plugin>
         </plugins>
